fix: Scale images into screen on mobile

--- a/src/app/help/documentation/documentation.page.scss
+++ b/src/app/help/documentation/documentation.page.scss
@@ -1,16 +1,10 @@
 .inner {
-    max-width: 1200px;
-    min-width: 300px;
-    padding: 0; 
-    margin: auto;
-   
+    padding: 0;    
   }
-  .text {
-    max-width: 1200px;
-    min-width: 300px;
-    margin: auto;
-  }
- 
+ .content{
+   max-width: 1200px;
+   margin: auto;
+ }
   button{
     background-color: transparent;
     background-repeat:no-repeat;
